' Generated by UML Generator
' Encoded: jLRRJkCm47tFL_Yng8gqptr055WXf88gTVa0DnuLYyIEx4a5xENRSP9Ynh5D5n0lbJANCpDdpYGziyWDTarTs0UfMcvumwgQMxj4D7BR8LnNMctaCx0VnRqKm2ffgXgAWcyj6bxX6CxMt5Wmx7V1sBzVie4DygPTi8r3KRlUkDAx5UoXfhOXzPOtG8qDuBqMK-lG6Y0OIwsTgtaj5amgT8zbwNxcOoUpsjMJocESz2vfDs3sieBPoO9jjQw1gzw-0_GzzovVO6wf1wTpkT2zbk80yJfXXE0TzOI3CF_YbOq8uCqJCHP2t7Zk8WpYYXaEKTQUwmY5kEADX2XtmsvwX74xSzHZ607zMnIZVAuSjD6Yg_3yIGeYfh8TpMJBgQMdyfCIsFd0e3TBpM798rDPRoDzaPptfbuASQZg96Bfr2gKlsF1gNR1XEwsxlXY4k2n1SDHQdN9CSWSw4aLoj6Jcd3Tbvy5JP0HZr7WG7y6_KMochZJquI8IP4FHfKNjZdSlkVnc2YNgrMRtb16XQc4Zp3zQIrTGksECICd-VxrP79pVKzxTi_oss_bhXNyV-OxUZd3n1cqhqxyhQ9ClYFByi_fuUDR95ydD20dQ1gJqn6DoUs2nfo14kv_nGi
' URL: http://www.plantuml.com/plantuml/uml/jLRRJkCm47tFL_Yng8gqptr055WXf88gTVa0DnuLYyIEx4a5xENRSP9Ynh5D5n0lbJANCpDdpYGziyWDTarTs0UfMcvumwgQMxj4D7BR8LnNMctaCx0VnRqKm2ffgXgAWcyj6bxX6CxMt5Wmx7V1sBzVie4DygPTi8r3KRlUkDAx5UoXfhOXzPOtG8qDuBqMK-lG6Y0OIwsTgtaj5amgT8zbwNxcOoUpsjMJocESz2vfDs3sieBPoO9jjQw1gzw-0_GzzovVO6wf1wTpkT2zbk80yJfXXE0TzOI3CF_YbOq8uCqJCHP2t7Zk8WpYYXaEKTQUwmY5kEADX2XtmsvwX74xSzHZ607zMnIZVAuSjD6Yg_3yIGeYfh8TpMJBgQMdyfCIsFd0e3TBpM798rDPRoDzaPptfbuASQZg96Bfr2gKlsF1gNR1XEwsxlXY4k2n1SDHQdN9CSWSw4aLoj6Jcd3Tbvy5JP0HZr7WG7y6_KMochZJquI8IP4FHfKNjZdSlkVnc2YNgrMRtb16XQc4Zp3zQIrTGksECICd-VxrP79pVKzxTi_oss_bhXNyV-OxUZd3n1cqhqxyhQ9ClYFByi_fuUDR95ydD20dQ1gJqn6DoUs2nfo14kv_nGi
' Generated on: 2025-12-16T09:33:06.021099276

@startuml
skinparam classAttributeIconSize 0
hide circle

abstract class Parser {
  ~TimeStamp: String
  ~LogLevel: String
  ~className: String
  ~methodName: String
  ~parameters: String
  ~userId: int
  --
  +Parser(logLine: String)
  +isService(): boolean
  +getTimeStamp(): String
  +setTimeStamp(timeStamp: String): void
  +getLogLevel(): String
  +setLogLevel(logLevel: String): void
  +getClassName(): String
  +setClassName(className: String): void
  +getMethodName(): String
  +setMethodName(methodName: String): void
  +getParameters(): String
  +setParameters(parameters: String): void
  +getUserId(): int
  +toString(): String
}

class GetProductByidParser {
  -productId: int
  -userId: int
  --
  +GetProductByidParser(logLine: String)
  +getProductId(): int
  +setProductId(productId: int): void
  +getUserId(): int
  +setUserId(userId: int): void
  +toString(): String
}

class AddProductLogsParser {
  -name: String
  -price: double
  -userId: int
  -experationDate: String
  --
  +AddProductLogsParser(logLine: String)
  +getUserId(): int
  +setPrice(price: double): void
  +setUserId(userId: int): void
  +getExperationDate(): String
  +setExperationDate(experationDate: String): void
  +getName(): String
  +setName(name: String): void
  +getPrice(): double
  +toString(): String
}

class GetALLproductLogsParser {
  -userId: int
  --
  +GetALLproductLogsParser(logLine: String)
  +getUserId(): int
  +setUserId(userId: int): void
  +toString(): String
}

class DeleteProductLogsParser {
  -id: int
  -userId: int
  --
  +DeleteProductLogsParser(logLine: String)
  +getId(): int
  +setId(id: int): void
  +getUserId(): int
  +setUserId(userId: int): void
  +toString(): String
}

class UpdateProductLogsParser {
  -id: int
  -name: String
  -price: double
  --
  +UpdateProductLogsParser(logLine: String)
  +getId(): int
  +setId(id: int): void
  +getName(): String
  +setName(name: String): void
  +getPrice(): double
  +toString(): String
}

GetProductByidParser --|> Parser
AddProductLogsParser --|> Parser
GetALLproductLogsParser --|> Parser
DeleteProductLogsParser --|> Parser
UpdateProductLogsParser --|> Parser
@enduml